# ai-labs

./: .gitignore  README.md  ai_generator.py  contentspot.py  main.py  prompt_template.py  pyproject.toml  rag.py  settings.py  streamlit_app.py  utils.py  vector_db.py  vector_db_remote.py
.streamlit/: config.toml
ccc27e35-c964-4259-bc93-11e74cf60b02_index.faiss/: index.faiss  index.pkl
pages/: home.py  qr.py
